--- a/generators/app/templates/apex/DemoService.cls
+++ b/generators/app/templates/apex/DemoService.cls
@@ -49,10 +49,10 @@ public virtual with sharing class <%=serviceClassName%> {
      * @return The instance of <%=serviceClassName%>.
      **********************************************************************************/
     public static <%=serviceClassName%> getInstance() {
-        if (instance == null) {
-            instance = new <%=serviceClassName%>();
+        if (instance != null) {
+            return instance;
         }
-
+        instance = new <%=serviceClassName%>();
         return instance;
     }
 
